# criterion-bug-repro

./: Cargo.toml
benches/: ordsearch.rs
